@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-24T00:34:39Z",
-  "count_outdated" : 696,
-  "uniques_outdated" : 150,
-  "count" : 700,
-  "uniques" : 154,
+  "timestamp" : "2022-11-25T00:31:03Z",
+  "count_outdated" : 697,
+  "uniques_outdated" : 151,
+  "count" : 701,
+  "uniques" : 155,
   "views" : [
-    {
-      "timestamp": "2022-11-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-12T00:00:00Z",
       "count": 1,
@@ -28,6 +21,13 @@
     },
     {
       "timestamp": "2022-11-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
