@@ -3,11 +3,6 @@
   "uniques": 4,
   "views": [
     {
-      "timestamp": "2022-11-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-11-12T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2022-11-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
